config/network/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-cluster-pod-traffic
spec:
  podSelector:
    matchExpressions:
      - key: redis.io/cluster
        operator: Exists
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: redis.io/cluster
                operator: Exists
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: redis-operator-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: redis-operator
              app.kubernetes.io/component: controller-manager
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 26379
